<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/un"
        android:id="@+id/tvUserPost"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#110fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/tvTime"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvUserPost"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/tvUserPost" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/ivShow"
        android:src="@mipmap/logo"
        android:layout_below="@+id/tvText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/desc"
        android:layout_alignRight="@+id/tvTime"
        android:layout_alignEnd="@+id/tvTime" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:id="@+id/btnLike"
        android:layout_below="@+id/ivShow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:id="@+id/tvLiked"
        android:gravity="center_vertical"
        android:layout_below="@+id/ivShow"
        android:layout_toRightOf="@+id/btnLike"
        android:layout_alignBottom="@+id/btnLike"
        android:layout_toStartOf="@+id/btnComment"
        android:layout_toLeftOf="@+id/btnComment"
        android:textColor="#110fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt"
        android:id="@+id/tvText"
        android:gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvUserPost"
        android:layout_alignRight="@+id/tvTime"
        android:layout_alignEnd="@+id/tvTime" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comm"
        android:id="@+id/btnComment"
        android:layout_alignTop="@+id/tvLiked"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>